--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h2{
 .grid {
     display: grid;
     grid-template-columns: 1fr 6fr;
-    grid-template-rows: 10% 10% 20% 20%;
+    grid-template-rows: 0,5fr 1fr 1fr;
     grid-template-areas:'photo nom' 
                         'informatique formations' 
                         'adresse experiences' 
@@ -68,14 +68,12 @@ h2{
 .four{
     grid-area: formations;
     font-family: Helvetica;
-    margin-top: -130px;
     padding-left: 5vw;
 }
 
 .five {
     grid-area: experiences;
     font-family: Helvetica;
-    margin-top: -420px;
     padding-left: 5vw;
 }
 
